Improve performance of creating Bean